ingress-gateway-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: animals-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: cat-and-dog
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: animals-credential
    hosts:
    - "*"
